--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     },
     "devDependencies": {
         "axios": "^0.19",
+        "bootstrap": "^4.1.0",
         "cross-env": "^5.1",
+        "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.5",
         "popper.js": "^1.12",
@@ -19,11 +21,6 @@
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
-        "bootstrap": "^4.0.0",
-        "flexslider": "^2.7.0",
-        "font-awesome": "^4.7.0",
-        "jquery": "^3.3.1",
-        "owl.carousel": "^2.2.0",
-        "superfish": "^1.7.9"
+        "vue-template-compiler": "^2.6.10"
     }
 }
