--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "flag-icon-css": "^3.3.0"
+        "flag-icon-css": "^3.3.0",
+        "vuex": "^3.1.1"
     }
 }
